...
  const t = useAppTheme();
  return (
    <Pressable
      style={stylesBack.button}
      onPress={onPress}
      accessibilityRole="button"
      accessibilityLabel="Go back"
    >
      <Ionicons name="chevron-back" size={24} color={t.color.text.foreground} />
    </Pressable>
  );
}

...
